fixed rendering issues of the loading screen while on smaller devices

--- a/modules/loading/index.css
+++ b/modules/loading/index.css
@@ -7,6 +7,8 @@ body {
 	display: inline-block;
 	width: 25px;
 	height: 25px;
+	max-width: calc(80vw / 15);
+	max-height: calc(80vw / 15);
 	margin: 10px 3px 0 3px;
 	border: 5px solid #be1e2d;
 	transition: 0.5s;
@@ -18,11 +20,19 @@ body {
 
 #logo {
 	width: 330px;
+	max-width: 80vw;
 	margin-top: 30px;
 }
 
 #loading {
 	display: block;
 	height: 38px;
-	margin: 150px auto 0 auto;
+	max-width: 80vw;
+	margin: 50px auto 0 auto;
+}
+
+@media(max-width: 280px){
+	#loading{
+		height: unset;
+	}
 }
